# ConsoleAMPVicsek

./: .gitignore  .gitmodules  CMakeLists.txt  Vicsek.sln
Vicsek_AMPConsole/: 0øY  CMakeLists.txt  CSimulationController.cpp  CSimulationController.h  CommonStructs.h  Data0.json  DataCollection.h  DataCollectionGPU.cpp  DataCollectionGPU.h  Integrator.cpp  Integrator.h  Integrator2D.cpp  Integrator2D.h  IntegratorCollection.cpp  IntegratorCollection.h  MathHelper.cpp  MathHelper.h  Reduction.h  SplitsDensities_04.06_00.48.58.txt  SplitsDensities_04.06_01.06.01.txt  SplitsDensities_05.06_19.43.50.txt  SplitsDensities_09.07_00.52.36.txt  SplitsDensities_13.06_23.24.17.txt  SplitsDensities_14.06_01.01.44.txt  SplitsDensities_14.06_08.26.23.txt  SplitsDensities_14.06_11.07.42.txt  SplitsDensities_14.06_23.34.17.txt  SplitsDensities_15.06_03.49.58.txt  SplitsDensities_15.06_12.51.02.txt  SplitsDensities_15.06_13.24.30.txt  SplitsDensities_15.06_13.39.22.txt  SplitsDensities_15.06_13.54.19.txt  SplitsDensities_16.06_01.41.21.txt  SplitsDensities_16.06_23.01.23.txt  SplitsDensities_16.06_23.17.18.txt  SplitsVelocities_02.06_21.56.55.txt  SplitsVelocities_06.05_16.38.40.txt  SplitsVelocities_06.05_21.42.51.txt  SplitsVelocities_09.07_00.52.36.txt  SplitsVelocities_13.06_23.24.17.txt  (+59 more)
Vicsek_AMPConsole/AMP_Release/: vc120.idb
Vicsek_AMPConsole/Rand/: amp_tinymt_rng.h
Vicsek_AMPConsole/Results with unclear data/: 0ù`  ReadMe.txt  SplitsDensities_04.06_14.30.53.txt  SplitsDensities_05.06_21.07.48.txt  SplitsDensities_06.06_00.45.13.txt  SplitsDensities_13.06_22.51.23.txt  SplitsDensities_14.06_02.48.07.txt  SplitsDensities_15.06_03.32.57.txt  SplitsDensities_15.06_04.00.21.txt  SplitsDensities_15.06_13.15.17.txt  SplitsVelocities_01.05_15.21.42.txt  SplitsVelocities_01.06_12.59.24.txt  SplitsVelocities_02.06_22.03.31.txt  SplitsVelocities_02.06_22.29.51.txt  SplitsVelocities_02.06_22.53.58.txt  SplitsVelocities_05.06_21.07.48.txt  SplitsVelocities_06.05_16.57.32.txt  SplitsVelocities_06.05_17.02.21.txt  SplitsVelocities_30.05_18.12.35.txt  Velocities_01.05_15.21.42.txt  Velocities_01.06_12.43.21.txt  Velocities_01.06_13.09.35.txt  Velocities_02.06_21.56.55.txt  Velocities_02.06_22.29.51.txt  Velocities_02.06_22.46.11.txt  Velocities_04.06_00.48.58.txt  Velocities_04.06_14.11.26.txt  Velocities_06.05_16.50.18.txt  Velocities_06.05_21.42.51.txt  Velocities_10.05_16.15.33.txt  Velocities_27.04_23.51.51.txt  Velocities_28.04_16.54.09.txt  example.txt
Vicsek_AMPConsole/Results with unclear data about/: SplitsVelocities_01.06_12.46.56.txt  Velocities_01.06_12.46.56.txt
Vicsek_AMPConsole/SimulationRoutines/: CSimulationController.cpp  CSimulationController.h  CommonStructs.h  Integrator2D.cpp  Integrator2D.h  StabilityChecker.cpp  StabilityChecker.h  VelocityDispersionStabilityChecker.cpp  VelocityDispersionStabilityChecker.h  VelocityDistributionStabilityChecker.cpp  VelocityDistributionStabilityChecker.h  Vicsek2DIntegrator.cpp  Vicsek2DIntegrator.h  (+5 more)
(+133 files in other folders)
